[gd_scene load_steps=7 format=3 uid="uid://c1e35qgw5vkf4"]

[ext_resource type="Script" path="res://scripts/Level3_scripts/ground_button.gd" id="1_vpaq1"]
[ext_resource type="Texture2D" uid="uid://dpnghs638on8s" path="res://assets/level3_assets/world_objects/misc_sheet.png" id="2_t82pm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p1jfy"]
atlas = ExtResource("2_t82pm")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq6ma"]
atlas = ExtResource("2_t82pm")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ieh5j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1jfy")
}],
"loop": true,
"name": &"pressed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq6ma")
}],
"loop": true,
"name": &"unpressed",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p7i8i"]
radius = 2.5
height = 6.0

[node name="GroundButton" type="StaticBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_vpaq1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_ieh5j")
animation = &"unpressed"

[node name="UnpressedCollision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-14, 0, -6, -4, 6, -4, 15, 0)

[node name="PressedCollision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-14, 0, -6, -3, -6, -3, 6, -3, 15, 0)

[node name="PressedDetector" type="Area2D" parent="."]
position = Vector2(0, -4)
collision_layer = 6
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressedDetector"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_p7i8i")

[connection signal="body_entered" from="PressedDetector" to="." method="_on_pressed_detector_body_entered"]
[connection signal="body_exited" from="PressedDetector" to="." method="_on_pressed_detector_body_exited"]
